# sentiment-analysis-platform

./: .gitignore  Readme.md  text
deployment/: Readme.md
deployment/base/: kustomization.yml
deployment/base/gateway-service/: deployment.yml  kustomization.yml  service.yml
deployment/base/job-service/: deployment.yml  service.yml
deployment/base/postgres/: deployment.yml  kustomization.yml
deployment/base/redis/: deployment.yml
deployment/base/worker-service/: deployment.yml
deployment/charts/sentiment-app/: Chart.yaml  values-prod.yaml  values.yaml
deployment/charts/sentiment-app/templates/: configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  job-deployment.yaml  job-service.yaml  postgres.yaml  redis.yaml  secret.yaml  worker-deployment.yaml
deployment/overlays/dev/: gateway-patch.yml  ingress.yml  job-patch.yml  kustomization.yml  namespace.yml  worker-patch.yml
deployment/overlays/prod/: gateway-patch.yml  ingress.yml  job-patch.yml  kustomization.yml  namespace.yml
gateway-service/: .dockerignore  Dockerfile
gateway-service/application/: .env  README.md  main.py  pyproject.toml
gateway-service/application/api/v1/: endpoints.py  router.py
gateway-service/application/core/: config.py  schemas.py
infra/: .terraform.lock.hcl  apps.tf  ingress.tf  main.tf  provider.tf  readme.md
job-service/: Dockerfile
job-service/application/: README.md  main.py  pyproject.toml
job-service/application/api/v1/: endpoints.py  router.py
job-service/application/core/: config.py  schemas.py
job-service/application/db/: database.py  models.py
model-training/: .gitignore  README.md  main.py  pyproject.toml
model-training/config/: config.yml
model-training/scripts/: evaluate.py  predict.py  preprocess.py  train.py
worker-service/: Dockerfile
worker-service/application/: .env  main.py  pyproject.toml
worker-service/application/core/: config.py  pipeline.py
worker-service/application/db/: database.py  models.py
