[project]
name = "sentiment-gateway"
version = "0.1.0"
description = "High-performance API Gateway for the distributed sentiment analysis system."
authors = [
    { name = "Gurushik L J", email = "gurushikjayakumar@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest >= 8.0.0",
    "httpx >= 0.27.0"
]

[tool.poetry.scripts]
start = "main:main"
