[project]
name = "sentiment-job"
version = "0.1.0"
description = "Orchestration engine responsible for persisting structural tracking data and broking tasks."
authors = [
    { name = "Gurushik L J", email = "gurushikjayakumar@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.poetry.scripts]
start = "main:main"

[dependency-groups]
dev = [
    "redislite>=6.2.912183",
    "pytest >= 8.0.0",
    "httpx >= 0.27.0"
]
