[project]
name = "sentiment-worker"
version = "0.1.0"
description = "Asynchronous ML execution engine pulling and executing tasks from Redis queues."
authors = [
    { name = "Gurushik L J", email = "gurushikjayakumar@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
]

[tool.poetry.scripts]
start = "main:main"

[dependency-groups]
dev = [
    "redislite>=6.2.912183",
    "pytest >= 8.0.0",
    "httpx >= 0.27.0"
]
